--- a/styles-custom.css
+++ b/styles-custom.css
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
     text-align: center;
-    height: 1000px;
+    height: 1200px;
     margin: 0;
 }
 
@@ -12,22 +12,18 @@
     padding-top: 10px;
 }
 .container-header {
-    height: 32%;
-    box-sizing: border-box;
-    position: relative;
-    padding-top: 25px;
-    background-color: rgb(255, 230, 204);
+  height: 10%;
+  box-sizing: border-box;
+  position: relative;
+  padding-top: 2%;
+  background-color: rgb(255, 230, 204);
 }
 
 .container-bottom {
-    height: 3%;
+    height: 5%;
     box-sizing: border-box;
     position: relative;
-    text-align: center;
-    font-size: 150%;
-    font-family: 'Sacramento', cursive;
-    background-color: rgb(255, 230, 204);
-    color: rgb(0, 128, 128);
+    background-color: white;
 }
 
 ul {
@@ -63,14 +59,10 @@ ul {
 
 #otsikko {
     font-family: 'Sacramento', cursive;
-    font-size: 600%;
-    padding-top: 25px;
     color: rgb(0, 102, 102);
-  }
-
-#titteli {
-    font-family: 'Zen Maru Gothic', sans-serif;
-    color: rgb(0, 102, 102);
+    font-size: 400%;
+    padding-top: 2%;
+    padding-bottom: 2%;
   }
 
   .tnt {
@@ -86,14 +78,19 @@ ul {
     background-color: rgb(255, 230, 204);
     box-sizing: border-box;
     position: relative;
-    height: 90%;
+    height: 70%;
   }
 
   #esittely {
     font-family: 'Zen Maru Gothic', sans-serif;
     text-align: center;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 2%;
     color: rgb(0, 102, 102);
-    margin-left: 18%;
-    margin-right: 18%;
-    font-size: large;
-  }
+    font-size: 100%;
+    background-color: rgb(255, 230, 204);
+    height: 12%;
+    box-sizing: border-box;
+    position: relative;
+}
