--- a/styles-home.css
+++ b/styles-home.css
@@ -11,12 +11,21 @@
     position: relative;
     padding-top: 10px;
 }
+
 .container-header {
-    height: 20%;
-    box-sizing: border-box;
-    position: relative;
-    padding-top: 25px;
-    background-color: rgb(255, 230, 204);
+  height: 10%;
+  box-sizing: border-box;
+  position: relative;
+  padding-top: 2%;
+  background-color: rgb(255, 230, 204);
+}
+
+#otsikko {
+  font-family: 'Sacramento', cursive;
+  color: rgb(0, 102, 102);
+  font-size: 400%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 
 .container-link {
@@ -33,11 +42,7 @@
     height: 3%;
     box-sizing: border-box;
     position: relative;
-    text-align: center;
-    font-size: 150%;
-    font-family: 'Sacramento', cursive;
-    background-color: rgb(255, 230, 204);
-    color: rgb(0, 128, 128);
+    background-color: white;
 }
 
 ul {
@@ -71,15 +76,13 @@ ul {
     background-color: rgb(255, 230, 204);
   }
 
-#otsikko {
-    font-family: 'Sacramento', cursive;
-    font-size: 600%;
-    padding-top: 25px;
-    color: rgb(0, 102, 102);
-  }
-
 #titteli {
     font-family: 'Zen Maru Gothic', sans-serif;
+    text-align: center;
+    padding-bottom: 2%;
     color: rgb(0, 102, 102);
-  }
-
+    background-color: rgb(255, 230, 204);
+    height: 5%;
+    box-sizing: border-box;
+    position: relative;
+}
