--- a/styles-puvustukset.css
+++ b/styles-puvustukset.css
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
     text-align: center;
-    height: 1000px;
+    height: 1400px;
     margin: 0;
 }
 
@@ -13,33 +13,40 @@
 }
 
 .container-header {
-    height: 32%;
+    height: 10%;
     box-sizing: border-box;
     position: relative;
-    padding-top: 25px;
+    padding-top: 2%;
     background-color: rgb(255, 230, 204);
+}
+
+#otsikko {
+  font-family: 'Sacramento', cursive;
+  color: rgb(0, 102, 102);
+  font-size: 400%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 
 #esittely {
   font-family: 'Zen Maru Gothic', sans-serif;
   text-align: center;
+  padding-left: 15%;
+  padding-right: 15%;
+  padding-top: 2%;
   color: rgb(0, 102, 102);
-  margin-left: 18%;
-  margin-right: 18%;
-  font-size: large;
+  font-size: 100%;
+  background-color: rgb(255, 230, 204);
+  height: 12%;
+  box-sizing: border-box;
+  position: relative;
 }
 
 .container-bottom {
-    height: 3%;
-    padding-top: 2%;
-    padding-bottom: 5%;
+    height: 5%;
     box-sizing: border-box;
     position: relative;
-    text-align: center;
-    font-size: 150%;
-    font-family: 'Sacramento', cursive;
-    background-color: rgb(255, 230, 204);
-    color: rgb(0, 128, 128);
+    background-color: white;
 }
 
 ul {
@@ -51,6 +58,7 @@ ul {
   
   li {
     float:left;
+    font-size: 100%;
   }
   
   li a {
@@ -73,25 +81,16 @@ ul {
     background-color: rgb(255, 230, 204);
   }
 
-#otsikko {
-    font-family: 'Sacramento', cursive;
-    font-size: 600%;
-    padding-top: 25px;
-    color: rgb(0, 102, 102);
-  }
-
-  .tnt {
-    width: 100%;
-  }
   .carousel-inner{
-    width:100%;
+    width: 100%;
     max-width: 600px;
     margin: auto;
+    position: relative;
   }
 
   .container-carousel {
     background-color: rgb(255, 230, 204);
     box-sizing: border-box;
     position: relative;
-    height: 90%;
+    height: 64%;
   }
